general admin 98% complete, doctors admin 95% complete, website 90% complete

--- a/doctors admin/appointment/bookings.html
+++ b/doctors admin/appointment/bookings.html
@@ -253,7 +253,7 @@
               </div>
               <div class="more-option-btn d-flex align-items-center mt-5">
                 <div class="cancel-bookings custom-btn">cancel</div>
-                <div class="pending-bookings custom-btn">pending</div>
+                <div class="incomplete-bookings custom-btn">incomplete</div>
                 <div class="approve-bookings custom-btn">approve</div>
               </div>
             </div>
