--- a/main admin/profile/all-patients.html
+++ b/main admin/profile/all-patients.html
@@ -187,83 +187,167 @@
       </div>
       <!-- main content -->
       <div class="main-content-container">
-        <div class="main-content">
-          <!-- dashboard -->
-          <div class="appointment-list-container">
-            <!-- upcoming appointmentts -->
-            <div
-              class="upcoming-appointments-container p-5 grey-background mb-5"
-            >
-              <div
-                class="
-                  header-container
-                  d-flex
-                  align-items-center
-                  justify-content-between
-                  mb-5
-                "
-              >
-                <div class="upcoming-appointments-header">
-                  Bookings
-                </div>
-                <!-- <div class="view-all-btn">view all</div> -->
-                <div class="dropdown">
-                    <div class="view-all-btn custom-btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        View all
-                    </div>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" href="#">All</a>
-                      <a class="dropdown-item" href="#">Bookings</a>
-                      <a class="dropdown-item" href="#">Upcoming</a>
-                    </div>
-                  </div>
-              </div>
+        <div class="main-content d-flex">
+          <!-- all-patients -->
+          <div class="all-patients-container w-80 p-5">
+            <div class="all-patients-head d-flex justify-content-between mb-5">
+              <div class="all-patients-header">All Patients</div>
+              <div class="dropdown mr-3">
+                <a
+                  class="btn btn-secondary dropdown-toggle"
+                  href="#"
+                  role="button"
+                  id="dropdownMenuLink"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  All Patients
+                </a>
 
-              <div class="upcoming-appointments">
-                <div class="appointments">
-                  <div class="appointments_date mb-3">Today</div>
-                  <div class="individual-appointment d-flex">
-                    <div class="patients-profile-img"></div>
-                    <div class="patients-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="appointment-purpose">Check up</div>
-                      <div class="appointment-time">9:30 am - 10:30 am</div>
-                    </div>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">All Patients</a>
+                  <a class="dropdown-item" href="#">New </a>
+                  <a class="dropdown-item" href="#">Old</a>
+                </div>
+              </div>
+            </div>
+            <div class="patients-list d-flex justify-content-between mb-5">
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
                   </div>
-                  <div class="more-option-btn d-flex align-items-center mt-5">
-                    <div class="cancel-bookings custom-btn">cancel</div>
-                    <div class="incomplete-bookings custom-btn">incomplete</div>
-                    <div class="approve-bookings custom-btn">approve</div>
+                </div>
+              </div>
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
+                  </div>
+                </div>
+              </div>
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="upcoming-appointments-container p-5 grey-background">
-              <div
-                class="
-                  header-container
-                  d-flex
-                  align-items-center
-                  justify-content-between
-                  mb-5
-                "
-              >
-               
-              <div class="upcoming-appointments">
-                <div class="appointments">
-                  <div class="appointments_date mb-3">Monday 12 July, 2021</div>
-                  <div class="individual-appointment d-flex">
-                    <div class="patients-profile-img"></div>
-                    <div class="patients-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="appointment-purpose">Check up</div>
-                      <div class="appointment-time">9:30 am - 10:30 am</div>
-                    </div>
+            <div class="patients-list d-flex justify-content-between mb-5">
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
                   </div>
-                  <div class="more-option-btn d-flex align-items-center mt-5">
-                    <div class="cancel-bookings custom-btn">cancel</div>
-                    <div class="incomplete-bookings custom-btn">incomplete</div>
-                    <div class="approve-bookings custom-btn">approve</div>
+                </div>
+              </div>
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
+                  </div>
+                </div>
+              </div>
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="patients-list d-flex justify-content-between mb-5">
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
+                  </div>
+                </div>
+              </div>
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
+                  </div>
+                </div>
+              </div>
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="patients-list d-flex justify-content-between mb-5">
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
+                  </div>
+                </div>
+              </div>
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
+                  </div>
+                </div>
+              </div>
+              <div class="patients d-flex">
+                <div class="patients-profile-img"></div>
+                <div class="patients-info">
+                  <div class="doctors-info mb-4">
+                    <div class="name">Mabel Quins</div>
+                    <div class="blood-group">AB-</div>
+                    <div class="age">30</div>
+                    <div class="gender">female</div>
                   </div>
                 </div>
               </div>
@@ -272,6 +356,7 @@
         </div>
       </div>
     </div>
+
     <!-- </div> -->
     <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
